# la32r-instr-stats

./: .gitignore  .prettierrc.yml  README.md  eslint.config.js  index.html  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  ExternalError.ts  fonts.scss  theme.ts
wasm/: Cargo.toml
wasm/src/: decode.rs  lib.rs
