[package]
name = "la32r-instr-stats-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Rong \"Mantle\" Bao <webmaster@csmantle.top>"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies]
bitmatch = "0.1.1"
elf = { version = "0.7.4", default-features = false, features = [] }
js-sys = { version = "0.3.77", default-features = false, features = [] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.50", default-features = false, features = [] }
